# MechanicJaguar

./: Descripcion_del_ambiente.txt  README.md
ComputerVision/: CMakeLists.txt
ComputerVision/Footballer/: IPCamera.cpp
JaguarInstinct/src/: GameState.java
